--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^10.1.2",
     "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.176.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "glslify": "^7.1.1",
+    "glslify-loader": "^2.0.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.2",
     "leva": "^0.10.0",
     "lucide-react": "^0.503.0",
     "motion": "^12.10.4",
     "next": "15.3.1",
+    "postprocessing": "^6.37.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scroll-parallax": "^3.4.5",
@@ -33,6 +37,7 @@
     "suspend-react": "^0.1.3",
     "tailwind-merge": "^3.2.0",
     "three": "^0.176.0",
+    "three-mesh-bvh": "^0.9.0",
     "wouter": "^3.7.0"
   },
   "devDependencies": {
@@ -40,6 +45,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8"
   }
